# dadeum-backend

./: AGENTS.md
services/humanize-core/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/humanize-core/humanize_core/: __init__.py  api.py  config.py  debug_log.py  diff.py  graph.py  jobs.py  llm.py  schemas.py  security.py
services/humanize-core/humanize_core/im_not_ai/: __init__.py  audit.py  metrics.py  metrics_v2.py  preservation.py  prompts.py  resources.py  schemas.py
services/humanize-core/humanize_core/im_not_ai/resources/: quick-rules.md  stric-rules.md  strict-rules-old.md  strict-rules.md
services/humanize-core/scripts/: strict_rewrite_probe.py
services/humanize-core/tests/: test_api.py
